--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,6 @@
     ":semanticCommitTypeAll(meta)",
     ":semanticCommitScopeDisabled"
   ],
+  "semanticCommitType": "meta",
   "ignorePaths": [ "dev/**/oldest/docker-compose.yml" ]
 }
