--- a/package.json
+++ b/package.json
@@ -68,11 +68,11 @@
     "@types/lodash": "4.14.185",
     "@types/mocha": "9.1.1",
     "@types/node": "18.7.9",
-    "@types/pg": "^8.6.5",
+    "@types/pg": "8.6.5",
     "@types/semver": "7.3.12",
     "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.8",
-    "@types/tedious": "^4.0.9",
+    "@types/tedious": "4.0.9",
     "@types/uuid": "8.3.4",
     "chai": "4.3.6",
     "chai-as-promised": "7.1.1",
@@ -96,7 +96,7 @@
     "mariadb": "2.5.6",
     "markdownlint-cli": "0.32.2",
     "mocha": "10.0.0",
-    "moment": "^2.29.4",
+    "moment": "2.29.4",
     "mysql2": "2.3.3",
     "node-hook": "1.0.0",
     "nyc": "15.1.0",
