meta: automatically merge renovate PRs

--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,11 @@
     ":semanticCommitScopeDisabled"
   ],
   "semanticCommitType": "meta",
-  "ignorePaths": [ "dev/**/oldest/docker-compose.yml" ]
+  "ignorePaths": ["dev/**/oldest/docker-compose.yml"],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
+  ]
 }
