add types export alias to match older and newer module resolution for typescript types

--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
       "default": "./lib/errors/index.js",
       "types": "./types/errors/index.d.ts"
     },
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./types/*": {
+      "types": "./types/*.d.ts"
+    }
   },
   "engines": {
     "node": ">=10.0.0"
