--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@types/chai": "4.3.3",
     "@types/chai-as-promised": "7.1.5",
     "@types/chai-datetime": "0.0.37",
-    "@types/ibm_db": "^2.0.11",
+    "@types/ibm_db": "2.0.11",
     "@types/lodash": "4.14.187",
     "@types/mocha": "10.0.0",
     "@types/node": "18.11.9",
@@ -73,7 +73,7 @@
     "@types/semver": "7.3.13",
     "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.8",
-    "@types/snowflake-sdk": "^1.6.8",
+    "@types/snowflake-sdk": "1.6.8",
     "@types/tedious": "4.0.9",
     "@types/uuid": "8.3.4",
     "chai": "4.3.6",
