meta: migrate some test files to TS

--- a/package.json
+++ b/package.json
@@ -199,7 +199,7 @@
     "test-unit": "yarn mocha \"test/unit/**/*.test.[tj]s\"",
     "test-integration": "yarn mocha \"test/integration/**/*.test.[tj]s\"",
     "test-smoke": "yarn mocha \"test/smoke/**/*.test.[tj]s\" --timeout 600000",
-    "teaser": "node test/teaser.js",
+    "teaser": "ts-node test/teaser.ts",
     "test": "yarn prepare && yarn test-typings && yarn teaser && yarn test-unit && yarn test-integration",
     "----------------------------------------- coverage ------------------------------------------------": "",
     "cover": "rimraf coverage && yarn teaser && yarn cover-integration && yarn cover-unit && yarn merge-coverage",
@@ -257,13 +257,13 @@
     "----------------------------------------- development ---------------------------------------------": "",
     "fix-commit": "export TMPFILE=$(mktemp) && grep -v '^#' $(git rev-parse --git-dir)/COMMIT_EDITMSG > $TMPFILE && git commit -e -F $TMPFILE",
     "sscce": "node sscce.js",
-    "sscce-mariadb": "cross-env DIALECT=mariadb node sscce.js",
-    "sscce-mysql": "cross-env DIALECT=mysql node sscce.js",
-    "sscce-postgres": "cross-env DIALECT=postgres node sscce.js",
-    "sscce-postgres-native": "cross-env DIALECT=postgres-native node sscce.js",
-    "sscce-sqlite": "cross-env DIALECT=sqlite node sscce.js",
-    "sscce-mssql": "cross-env DIALECT=mssql node sscce.js",
-    "sscce-db2": "cross-env DIALECT=db2 node sscce.js",
+    "sscce-mariadb": "cross-env DIALECT=mariadb yarn sscce",
+    "sscce-mysql": "cross-env DIALECT=mysql yarn sscce",
+    "sscce-postgres": "cross-env DIALECT=postgres yarn sscce",
+    "sscce-postgres-native": "cross-env DIALECT=postgres-native yarn sscce",
+    "sscce-sqlite": "cross-env DIALECT=sqlite yarn sscce",
+    "sscce-mssql": "cross-env DIALECT=mssql yarn sscce",
+    "sscce-db2": "cross-env DIALECT=db2 yarn sscce",
     "prepare": "yarn build && husky install",
     "build": "node ./build.js",
     "---------------------------------------------------------------------------------------------------": ""
