meta: move types deps to devDeps

--- a/package.json
+++ b/package.json
@@ -41,9 +41,6 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@types/debug": "^4.1.7",
-    "@types/inflection": "^1.13.0",
-    "@types/validator": "^13.7.5",
     "dayjs": "^1.11.5",
     "debug": "^4.3.4",
     "dottie": "^2.0.2",
@@ -65,7 +62,9 @@
     "@types/chai": "4.3.3",
     "@types/chai-as-promised": "7.1.5",
     "@types/chai-datetime": "0.0.37",
+    "@types/debug": "4.1.7",
     "@types/ibm_db": "2.0.11",
+    "@types/inflection": "1.13.0",
     "@types/lodash": "4.14.188",
     "@types/mocha": "10.0.0",
     "@types/node": "18.11.9",
@@ -75,6 +74,7 @@
     "@types/sinon-chai": "3.2.9",
     "@types/snowflake-sdk": "1.6.9",
     "@types/tedious": "4.0.9",
+    "@types/validator": "13.7.10",
     "@types/uuid": "8.3.4",
     "chai": "4.3.6",
     "chai-as-promised": "7.1.1",
