--- a/package.json
+++ b/package.json
@@ -41,6 +41,13 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@types/debug": "^4.1.7",
+    "@types/ibm_db": "^2.0.11",
+    "@types/inflection": "^1.13.0",
+    "@types/pg": "^8.6.5",
+    "@types/snowflake-sdk": "^1.6.9",
+    "@types/tedious": "^4.0.9",
+    "@types/validator": "^13.7.10",
     "dayjs": "^1.11.5",
     "debug": "^4.3.4",
     "dottie": "^2.0.2",
@@ -62,19 +69,12 @@
     "@types/chai": "4.3.3",
     "@types/chai-as-promised": "7.1.5",
     "@types/chai-datetime": "0.0.37",
-    "@types/debug": "4.1.7",
-    "@types/ibm_db": "2.0.11",
-    "@types/inflection": "1.13.0",
     "@types/lodash": "4.14.188",
     "@types/mocha": "10.0.0",
     "@types/node": "18.11.9",
-    "@types/pg": "8.6.5",
     "@types/semver": "7.3.13",
     "@types/sinon": "10.0.13",
     "@types/sinon-chai": "3.2.9",
-    "@types/snowflake-sdk": "1.6.9",
-    "@types/tedious": "4.0.9",
-    "@types/validator": "13.7.10",
     "@types/uuid": "8.3.4",
     "chai": "4.3.6",
     "chai-as-promised": "7.1.1",
