--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -6,6 +6,6 @@ contact_links:
   - name: 🔧 Having issues with Sequelize CLI?
     url: https://github.com/sequelize/cli/issues
     about: The issue tracker is for Sequelize CLI issues.
-  - name: 📗 Having issues with Sequelize documentation?
+  - name: 📗 Found an issue in our documentation?
     url: https://github.com/sequelize/website/issues
-    about: The issue tracker is for Sequelize documentation issues.
+    about: Please file an issue in the Sequelize website repository.
