--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,7 +5,7 @@ contact_links:
     about: The issue tracker is for bug reports and feature requests. Use GitHub Discussions for question and help requests.
   - name: 🔧 Having issues with Sequelize CLI?
     url: https://github.com/sequelize/cli/issues
-    about: The issue tracker is for Sequelize CLI issues.
+    about: Please file an issue in the Sequelize CLI repository.
   - name: 📗 Found an issue in our documentation?
     url: https://github.com/sequelize/website/issues
     about: Please file an issue in the Sequelize website repository.
