--- a/package.json
+++ b/package.json
@@ -219,8 +219,9 @@
     "start-mssql-oldest": "bash dev/mssql/oldest/start.sh",
     "start-mssql-latest": "bash dev/mssql/latest/start.sh",
     "start-db2-oldest": "bash dev/db2/oldest/start.sh",
+    "start-db2-latest": "bash dev/db2/latest/start.sh",
     "start-oldest": "concurrently \"npm:start-*(!db2)-oldest\" && npm run start-db2-oldest",
-    "start-latest": "concurrently \"npm:start-*(!db2)-latest\"",
+    "start-latest": "concurrently \"npm:start-*(!db2)-latest\" && npm run start-db2-latest",
     "stop-mariadb": "bash dev/mariadb/oldest/stop.sh; bash dev/mariadb/latest/stop.sh",
     "stop-mysql": "bash dev/mysql/oldest/stop.sh; bash dev/mysql/latest/stop.sh",
     "stop-postgres": "bash dev/postgres/oldest/stop.sh; bash dev/postgres/latest/stop.sh",
