--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dayjs": "^1.11.5",
     "debug": "^4.3.4",
     "dottie": "^2.0.2",
+    "fast-glob": "^3.2.12",
     "inflection": "^2.0.0",
     "lodash": "^4.17.21",
     "pg-connection-string": "^2.5.0",
@@ -92,7 +93,6 @@
     "eslint-plugin-jsdoc": "39.6.4",
     "eslint-plugin-mocha": "10.1.0",
     "expect-type": "0.13.0",
-    "fast-glob": "3.2.12",
     "fs-jetpack": "5.1.0",
     "husky": "8.0.2",
     "ibm_db": "3.0.0",
