--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/debug": "^4.1.7",
-    "@types/retry-as-promised": "2.3.4",
+    "@types/retry-as-promised": "^2.3.4",
     "@types/validator": "^13.7.5",
     "dayjs": "^1.11.5",
     "debug": "^4.3.4",
