--- a/package.json
+++ b/package.json
@@ -221,6 +221,7 @@
     "start-mssql-oldest": "bash dev/mssql/oldest/start.sh",
     "start-mssql-latest": "bash dev/mssql/latest/start.sh",
     "start-db2-oldest": "bash dev/db2/oldest/start.sh",
+    "start-cockroachdb-oldest": "bash dev/cockroachdb/oldest/start.sh",
     "start-oldest": "concurrently \"npm:start-*(!db2)-oldest\" && npm run start-db2-oldest",
     "start-latest": "concurrently \"npm:start-*(!db2)-latest\"",
     "stop-mariadb": "bash dev/mariadb/oldest/stop.sh; bash dev/mariadb/latest/stop.sh",
@@ -228,6 +229,7 @@
     "stop-postgres": "bash dev/postgres/oldest/stop.sh; bash dev/postgres/latest/stop.sh",
     "stop-mssql": "bash dev/mssql/oldest/stop.sh; bash dev/mssql/latest/stop.sh",
     "stop-db2": "bash dev/db2/oldest/stop.sh",
+    "stop-cockroachdb-oldest": "bash dev/cockroachdb/oldest/stop.sh",
     "stop-all": "concurrently \"npm:stop-*(!all|db2)\" && npm run stop-db2",
     "----------------------------------------- unit tests ---------------------------------------------": "",
     "test-unit-mariadb": "cross-env DIALECT=mariadb yarn test-unit",
