--- a/package.json
+++ b/package.json
@@ -123,6 +123,9 @@
     "tedious": "15.1.2",
     "ts-node": "10.9.1",
     "typedoc": "0.23.23",
+    "typedoc-plugin-carbon-ads": "^1.1.6",
+    "typedoc-plugin-mdn-links": "^2.0.1",
+    "typedoc-plugin-missing-exports": "^1.0.0",
     "typescript": "4.9.4"
   },
   "peerDependenciesMeta": {
