--- a/package.json
+++ b/package.json
@@ -193,7 +193,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "tag": "alpha"
+    "tag": "latest"
   },
   "scripts": {
     "----------------------------------------- static analysis -----------------------------------------": "",
