--- a/dev/db2/latest/docker-compose.yml
+++ b/dev/db2/latest/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.3'
 services:
     db2-latest:
         container_name: sequelize-db2-latest
@@ -7,7 +6,7 @@ services:
         ports:
             - '50000:50000'
         environment:
-            - DBNAME=$SEQ_DB
+            DBNAME: TEST_DB
         volumes:
             - '/Docker:/database'
         image: 'ibmcom/db2-amd64:11.5.8.0'
