updated data types, connection manager, and query generator to inherit and overrid postgres helpers for cockroachDB

--- a/dev/cockroachdb/oldest/docker-compose.yml
+++ b/dev/cockroachdb/oldest/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - cockroach-single:/cockroach/cockroach-data
       - ~/init-scripts:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD", "pg_isready"]
+      test: curl --fail http://localhost:8080 || exit 1
       interval: 3s
       timeout: 1s
       retries: 10
