--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@sequelize/monorepo",
   "private": true,
   "scripts": {
-    "publish": "yarn workspaces run semantic-release",
+    "prepare": "husky install",
+    "publish-all": "yarn workspaces run semantic-release",
     "lint": "eslint . --fix --report-unused-disable-directives",
     "lint-no-fix": "eslint . --quiet --report-unused-disable-directives",
     "docs": "typedoc",
